# nanomsg

./: CMakeLists.txt
src/: CMakeLists.txt
src/core/: global.c
